multiple contexts and many to many example with movies

--- a/Source/AuthFun.Web/AuthFun.Web.csproj
+++ b/Source/AuthFun.Web/AuthFun.Web.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AuthFun.Business\AuthFun.Business.csproj" />
     <ProjectReference Include="..\AuthFun.Data\AuthFun.Data.csproj" />
   </ItemGroup>
 
